--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "restaurant.js",
   "scripts": {
-    "start": "node restaurant.js"
+    "start": "nodemon restaurant.js"
   },
   "keywords": [],
   "author": "Sarbik Betal",
   "license": "ISC",
   "dependencies": {
     "bee-queue": "^1.2.3",
+    "bull-arena": "^3.30.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
